<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <EditText
        android:id="@+id/entradaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/senha"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="91dp"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/entradaNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nome"
        android:layout_below="@+id/nome"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/entradaSenha"
        android:layout_alignLeft="@+id/entradaNome"
        android:text="@string/senha" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entradaSenha"
        android:layout_alignRight="@+id/entradaNome"
        android:layout_below="@+id/entradaSenha"
        android:layout_marginTop="27dp"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/bt_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_entrar"
        android:layout_alignRight="@+id/bt_entrar"
        android:layout_below="@+id/bt_entrar"
        android:layout_marginTop="16dp"
        android:text="@string/registrar" />

</RelativeLayout>