<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margem"
    android:paddingLeft="@dimen/activity_horizontal_margem"
    android:paddingRight="@dimen/activity_horizontal_margem"
    android:paddingTop="@dimen/activity_vertical_margem" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/data" />

        <TextView
            android:id="@+id/remetente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/data"
            android:text="@string/remetente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/linha"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/remetente"
            android:background="#000000" />

        <TextView
            android:id="@+id/conteudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linha"
            android:text="@string/conteudo" /> 
    </RelativeLayout>

</ScrollView>